(env
 (dev
  (flags ())))

(library
 (public_name plugin1.plugin1_impl)
 (name plugin1_impl)
 (modules plugin1_impl)
 (flags
  (:standard
   -linkall
   ; explicit cclib doesn't help but...
   ;-cclib
   ;-lLLVM-14
   ;
   ))
 (libraries
  app.register
  llvm
  unix
  ;LL
  ))

(plugin
 (name plugin1)
 (libraries plugin1.plugin1_impl)
 (site
  (app plugins)))
